[gd_scene load_steps=6 format=2]

[ext_resource path="res://boidTest.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 8 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 12.789, 0, 0, Vector2( 0.219466, 0.953988 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.68939, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 0, 4, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 115.2
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 0.2
scale_curve = SubResource( 3 )

[node name="boid" type="Area2D" groups=["boid"]]
script = ExtResource( 1 )

[node name="Sprite" type="Polygon2D" parent="."]
offset = Vector2( -9, 0 )
polygon = PoolVector2Array( 0, 8, 0, -8, 22, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[node name="vision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="vision"]
position = Vector2( 2.225, 0 )
scale = Vector2( 1.11667, 1 )
polygon = PoolVector2Array( -18, 26, 13, 33, 57, 19, 57, -19, 13, -33, -18, -26 )

[node name="rayFolder" type="Node2D" parent="."]

[node name="RayCast2D1" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 25, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 23, -8 )

[node name="RayCast2D3" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 23, 8 )

[node name="RayCast2D4" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 18, 15 )

[node name="RayCast2D5" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 18, -15 )

[node name="RayCast2D6" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 10, -18 )

[node name="RayCast2D7" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 10, 18 )

[node name="RayCast2D8" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 2, 19 )

[node name="RayCast2D9" type="RayCast2D" parent="rayFolder"]
enabled = true
cast_to = Vector2( 2, -19 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( -8, 0 )
z_index = -1
lifetime = 2.0
local_coords = false
process_material = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_boid_body_entered"]
[connection signal="area_entered" from="vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="vision" to="." method="_on_vision_area_exited"]
